[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/main/session_setup/ReadyScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/theme.tres" type="Theme" id=2]
[ext_resource path="res://src/ui/PlayerStatus.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/ui/gray_panel_tab_stylebox.tres" type="StyleBox" id=6]
[ext_resource path="res://src/main/match_setup/CountdownTimer.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/ui/tank-edit/tank-edit/tankui-edit-61.png" type="Texture" id=11]
[ext_resource path="res://assets/ui/tank-edit/tank-edit/tankbt__0.-68.png" type="Texture" id=12]
[ext_resource path="res://assets/animation/find-match/count-sec-2.png" type="Texture" id=13]
[ext_resource path="res://assets/animation/find-match/count-sec-1.png" type="Texture" id=14]
[ext_resource path="res://assets/animation/find-match/count-sec-0.png" type="Texture" id=15]
[ext_resource path="res://assets/animation/find-match/count-sec-3.png" type="Texture" id=16]

[sub_resource type="Animation" id=1]
resource_name = "game_start_sec"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Panel/GameStart:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 16 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ]
}

[node name="ReadyScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomType" type="TextureRect" parent="."]
margin_left = 12.0
margin_top = 14.0
margin_right = 562.0
margin_bottom = 138.0
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="RoomType"]
margin_left = 24.0
margin_top = 16.0
margin_right = 128.0
margin_bottom = 104.0
texture = ExtResource( 12 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="RoomType"]
margin_left = 163.0
margin_top = 26.0
margin_right = 965.0
margin_bottom = 242.0
rect_scale = Vector2( 0.337783, 0.337783 )
text = "ห้อง 000 บาท"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountdownTimer" parent="." instance=ExtResource( 8 )]
margin_left = -72.0
margin_top = 325.0
margin_right = -1687.0
margin_bottom = -677.0
rect_scale = Vector2( 8.3595, 8.3595 )

[node name="Panel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameStart" type="TextureRect" parent="Panel"]
margin_left = 730.522
margin_top = 132.185
margin_right = 1201.52
margin_bottom = 212.185
rect_scale = Vector2( 1.91249, 2.62694 )
texture = ExtResource( 16 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusContainer" type="GridContainer" parent="Panel"]
margin_left = 280.0
margin_top = 393.0
margin_right = 3004.0
margin_bottom = 1573.0
rect_scale = Vector2( 0.4, 0.5 )
custom_constants/vseparation = 30
custom_constants/hseparation = 180
columns = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="PlayerStatus" parent="Panel/StatusContainer" instance=ExtResource( 3 )]
rect_scale = Vector2( 1, 1 )

[node name="PlayerStatus2" parent="Panel/StatusContainer" instance=ExtResource( 3 )]
margin_left = 1732.0
margin_right = 3284.0
rect_scale = Vector2( 1, 1 )

[node name="PlayerStatus3" parent="Panel/StatusContainer" instance=ExtResource( 3 )]
margin_top = 246.0
margin_bottom = 462.0
rect_scale = Vector2( 1, 1 )

[node name="PlayerStatus4" parent="Panel/StatusContainer" instance=ExtResource( 3 )]
margin_left = 1732.0
margin_top = 246.0
margin_right = 3284.0
margin_bottom = 462.0
rect_scale = Vector2( 1, 1 )

[node name="PlayerStatus5" parent="Panel/StatusContainer" instance=ExtResource( 3 )]
margin_top = 492.0
margin_bottom = 708.0
rect_scale = Vector2( 1, 1 )

[node name="PlayerStatus6" parent="Panel/StatusContainer" instance=ExtResource( 3 )]
margin_left = 1732.0
margin_top = 492.0
margin_right = 3284.0
margin_bottom = 708.0
rect_scale = Vector2( 1, 1 )

[node name="PlayerStatus7" parent="Panel/StatusContainer" instance=ExtResource( 3 )]
margin_top = 738.0
margin_bottom = 954.0
rect_scale = Vector2( 1, 1 )

[node name="PlayerStatus8" parent="Panel/StatusContainer" instance=ExtResource( 3 )]
margin_left = 1732.0
margin_top = 738.0
margin_right = 3284.0
margin_bottom = 954.0
rect_scale = Vector2( 1, 1 )

[node name="PlayerStatus9" parent="Panel/StatusContainer" instance=ExtResource( 3 )]
margin_top = 984.0
margin_bottom = 1200.0
rect_scale = Vector2( 1, 1 )

[node name="PlayerStatus10" parent="Panel/StatusContainer" instance=ExtResource( 3 )]
margin_left = 1732.0
margin_top = 984.0
margin_right = 3284.0
margin_bottom = 1200.0
rect_scale = Vector2( 1, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/game_start_sec = SubResource( 1 )

[connection signal="show_player" from="CountdownTimer" to="." method="_on_CountdownTimer_show_player"]
[connection signal="start_match_finished" from="CountdownTimer" to="." method="_on_CountdownTimer_start_match_finished"]
